[gd_scene load_steps=35 format=3 uid="uid://bij3lurej3nm7"]

[ext_resource type="Script" path="res://Skeleton-axe.gd" id="1_6wctg"]
[ext_resource type="Texture2D" uid="uid://buyh8ee8jgx51" path="res://assets/enemies/Enemy_Skeleton/Skeleton Idle.png" id="2_8fals"]
[ext_resource type="Texture2D" uid="uid://bival5fm82mch" path="res://assets/enemies/Enemy_Skeleton/Skeleton Walk.png" id="3_p8n8p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ttr3"]
size = Vector2(22, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uocf"]
atlas = ExtResource("2_8fals")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ekha"]
atlas = ExtResource("2_8fals")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rncpa"]
atlas = ExtResource("2_8fals")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx7w1"]
atlas = ExtResource("2_8fals")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xtc7"]
atlas = ExtResource("2_8fals")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eatq5"]
atlas = ExtResource("2_8fals")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56hdf"]
atlas = ExtResource("2_8fals")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk1cw"]
atlas = ExtResource("2_8fals")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvw83"]
atlas = ExtResource("2_8fals")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_te42e"]
atlas = ExtResource("2_8fals")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd2wb"]
atlas = ExtResource("2_8fals")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vksqn"]
atlas = ExtResource("3_p8n8p")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gct1r"]
atlas = ExtResource("3_p8n8p")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxci5"]
atlas = ExtResource("3_p8n8p")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiok5"]
atlas = ExtResource("3_p8n8p")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7mu3"]
atlas = ExtResource("3_p8n8p")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_72ohc"]
atlas = ExtResource("3_p8n8p")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh5nl"]
atlas = ExtResource("3_p8n8p")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1djod"]
atlas = ExtResource("3_p8n8p")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwcjb"]
atlas = ExtResource("3_p8n8p")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6kow"]
atlas = ExtResource("3_p8n8p")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sbut"]
atlas = ExtResource("3_p8n8p")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cshui"]
atlas = ExtResource("3_p8n8p")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_shqo4"]
atlas = ExtResource("3_p8n8p")
region = Rect2(264, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_7n5x0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uocf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ekha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx7w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xtc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eatq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56hdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk1cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvw83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te42e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd2wb")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vksqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gct1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxci5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiok5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7mu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72ohc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh5nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1djod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwcjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6kow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sbut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cshui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shqo4")
}],
"loop": true,
"name": &"Run",
"speed": 13.0
}]

[sub_resource type="Animation" id="Animation_dmkty"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_fkhoj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_tl26v"]
resource_name = "Run"
length = 1.27
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jce3w"]
_data = {
"Idle": SubResource("Animation_dmkty"),
"RESET": SubResource("Animation_fkhoj"),
"Run": SubResource("Animation_tl26v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i06l"]
size = Vector2(144.625, 42)

[node name="Skeleton-axe" type="CharacterBody2D"]
script = ExtResource("1_6wctg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -16)
shape = SubResource("RectangleShape2D_4ttr3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_7n5x0")
animation = &"Run"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_jce3w")
}

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -22)
shape = SubResource("RectangleShape2D_6i06l")

[node name="raycast_right" type="RayCast2D" parent="."]
position = Vector2(1, 0)
target_position = Vector2(0, 13)

[node name="raycast_left" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, 13)

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
